--- a/WeatherApp/Views/Weather/City.cshtml
+++ b/WeatherApp/Views/Weather/City.cshtml
@@ -1,4 +1,7 @@
 ﻿@model CityWeather
+@{
+    Layout = "_Layout";
+}
 
 <!DOCTYPE html>
 
@@ -9,38 +12,29 @@
     <link rel="stylesheet" href="~/StyleSheet.css" />
 </head>
 <body>
-<div class="container">
-    <div class="page-content">
-        <div class="margin-bottom">
-            <h1>Weather</h1>
+@if (Model != null)
+{
+    <div class="box cursor-pointer w-30 margin-auto margin-top-200">
+        <div class="flex-borderless">
+            <div class="w-50">
+                <h2>@Model.CityName.ToString()</h2>
+                <h4 class="text-grey">@Model.DateAndTime.ToString()</h4>
+                <h4 class="text-grey">@Model.DateAndTime.ToString()</h4>
+            </div>
+            <div class="w-50 border-left">
+                <h1 class="margin-left">@Model.CityName<sup class="text-grey">&#8457</sup></h1>
+            </div>
         </div>
-
-        @if (Model != null)
-        {
-            <div class="box cursor-pointer w-30 margin-auto margin-top-200">
-                <div class="flex-borderless">
-                    <div class="w-50">
-                        <h2>@Model.CityName.ToString()</h2>
-                        <h4 class="text-grey">@Model.DateAndTime.ToString()</h4>
-                        <h4 class="text-grey">@Model.DateAndTime.ToString()</h4>
-                    </div>
-                    <div class="w-50 border-left">
-                        <h1 class="margin-left">@Model.CityName<sup class="text-grey">&#8457</sup></h1>
-                    </div>
-                </div>
-            </div>
-
-            <div class="text-center">
-                <a href="~/">Back to Weather Home Page</a>
-            </div>
-        }
-        else
-        {
-            <h3>City Code is not valid.</h3>
-        }
-
     </div>
 
-</div>
+    <div class="text-center">
+        <a href="~/">Back to Weather Home Page</a>
+    </div>
+}
+else
+{
+    <h3>City Code is not valid.</h3>
+}
+
 </body>
 </html>
